# secretm

./: Pipfile  README.md  build.sh  pyproject.toml  secrets.py  setup.cfg  test.py
.github/workflows/: python-publish.yml
secretm/: __init__.py  secret.py  secretm.py  secrets.enc
tests/: .gitignore  __init__.py  secrets.enc  test_secrets.py
tst/: secrets.enc  test.py
