[metadata]
# replace with your username:
name = secrets-bw
version = 0.0.2
author = Bailey Wickham
author_email = baileywickham@gmail.com
description = A tiny secrets manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baileywickham/secrets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
